fixed the create project button showing up in the middle on mobile view if there are no projects available

--- a/src/components/Global/header.css
+++ b/src/components/Global/header.css
@@ -175,7 +175,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
     height: 25px;
     width: 25px;
     display: block;
-    margin-top: 50vh;
+    margin: 50vh 0 auto auto;
     border-radius: 50%;
     padding: 1rem 1rem;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2)
